// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="AppMenu-root-154"
  >
    <header
      className="MuiPaper-root-169 MuiPaper-elevation4-175 MuiAppBar-root-161 MuiAppBar-positionFixed-162 MuiAppBar-colorPrimary-167 mui-fixed"
    >
      <div
        className="MuiToolbar-root-196 MuiToolbar-regular-198 MuiToolbar-gutters-197 AppMenu-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201 AppMenu-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-205"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-209"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </button>
        <h2
          className="MuiTypography-root-223 MuiTypography-title-229 MuiTypography-colorInherit-242 AppMenu-flex-155"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-205"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-209"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </button>
        <div
          className="MenuButton-root-248"
        >
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-205"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-209"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-216"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="AppMenu-spacer-159"
    />
  </div>
  <button
    aria-label="New Player"
    className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-fab-278 MuiButton-contained-272 MuiButton-containedSecondary-274 MuiButton-raised-275 MuiButton-raisedSecondary-277 APIComponent-actionButton-149"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-264"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-209"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-216"
    />
  </button>
  <div
    className="PlayerCards-root-287"
  >
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            No Players Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="AppMenu-root-154"
  >
    <header
      className="MuiPaper-root-169 MuiPaper-elevation4-175 MuiAppBar-root-161 MuiAppBar-positionFixed-162 MuiAppBar-colorPrimary-167 mui-fixed"
    >
      <div
        className="MuiToolbar-root-196 MuiToolbar-regular-198 MuiToolbar-gutters-197 AppMenu-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201 AppMenu-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-205"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-209"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </button>
        <h2
          className="MuiTypography-root-223 MuiTypography-title-229 MuiTypography-colorInherit-242 AppMenu-flex-155"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-205"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-209"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </button>
        <div
          className="MenuButton-root-248"
        >
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-206 MuiIconButton-root-200 MuiIconButton-colorInherit-201"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-205"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-209"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-216"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="AppMenu-spacer-159"
    />
  </div>
  <button
    aria-label="New Player"
    className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-fab-278 MuiButton-contained-272 MuiButton-containedSecondary-274 MuiButton-raised-275 MuiButton-raisedSecondary-277 APIComponent-actionButton-149"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-264"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-209"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-216"
    />
  </button>
  <div
    className="PlayerCards-root-287"
  >
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          0 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock1"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test1
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          1 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test2
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          2 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock3"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test3
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          3 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock4"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test4
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          4 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock4"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock5"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test5
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          5 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock5"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock6"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test6
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          6 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock6"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock7"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test7
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          7 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock7"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock8"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test8
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          8 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock8"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-169 MuiPaper-elevation1-172 MuiPaper-rounded-170 MuiCard-root-290 PlayerCards-card-288"
      id="mock9"
    >
      <div
        className="MuiCardHeader-root-291"
      >
        <div
          className="MuiCardHeader-content-294"
        >
          <span
            className="MuiTypography-root-223 MuiTypography-headline-228 MuiCardHeader-title-295"
          >
            test9
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-297"
      >
        <p
          className="MuiTypography-root-223 MuiTypography-body1-232"
        >
          9 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-298"
      >
        <a
          className="MuiButtonBase-root-206 MuiButton-root-263 MuiButton-text-265 MuiButton-flat-268 MuiButton-sizeSmall-284 PlayerCards-right-289 MuiCardActions-action-299"
          href="/player/mock9"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-264"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-216"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
